[fix] minor fixes - better error classification - checks and creates the output folder for tests and mutations